# volta

./: .dprint.jsonc  .markdownlint.json  AGENTS.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  Cargo.toml  ENVIRONMENT.md  README.md  RELEASES.md  rust-toolchain.toml  tombi.toml
.github/: dependabot.yml
.github/workflows/: api-docs.yml  release.yml  test.yml
.zed/: settings.json
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs  tarball.rs  zipfile.rs
crates/fs-utils/: Cargo.toml
crates/fs-utils/src/: lib.rs
crates/progress-read/: Cargo.toml
crates/progress-read/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  matchers.rs  paths.rs  process.rs
crates/validate-npm-package-name/: Cargo.toml
crates/validate-npm-package-name/src/: lib.rs
crates/volta/: Cargo.toml
crates/volta-core/: Cargo.toml
crates/volta-core/src/: event.rs  fs.rs  inventory.rs  lib.rs  log.rs  monitor.rs  session.rs  shim.rs  style.rs  sync.rs
crates/volta-core/src/error/: binary.rs  command.rs  environment.rs  filesystem.rs  hook.rs  kind.rs  mod.rs  network.rs  package.rs  platform.rs  reporter.rs  shim.rs  tool.rs  version.rs
crates/volta-core/src/hook/: mod.rs  serial.rs  tool.rs
crates/volta-core/src/layout/: mod.rs  unix.rs  windows.rs
crates/volta-core/src/platform/: image.rs  mod.rs  system.rs  tests.rs
crates/volta-core/src/project/: mod.rs  serial.rs  tests.rs
crates/volta-core/src/run/: binary.rs  executor.rs  mod.rs  node.rs  npm.rs  npx.rs  parser.rs  pnpm.rs  yarn.rs
crates/volta-core/src/tool/: mod.rs  registry.rs  serial.rs
crates/volta-core/src/tool/node/: fetch.rs  metadata.rs  mod.rs  resolve.rs
crates/volta-core/src/tool/npm/: fetch.rs  mod.rs  resolve.rs
crates/volta-core/src/tool/package/: configure.rs  install.rs  manager.rs  metadata.rs  mod.rs  uninstall.rs
crates/volta-core/src/tool/pnpm/: fetch.rs  mod.rs  resolve.rs
crates/volta-core/src/tool/yarn/: fetch.rs  metadata.rs  mod.rs  resolve.rs
crates/volta-core/src/toolchain/: mod.rs  serial.rs
crates/volta-core/src/version/: mod.rs  serial.rs
crates/volta-layout/: Cargo.toml
crates/volta-layout-macro/: Cargo.toml
crates/volta-layout-macro/src/: ast.rs  ir.rs  lib.rs
crates/volta-layout/src/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
crates/volta-migrate/: Cargo.toml
crates/volta-migrate/src/: empty.rs  lib.rs  v0.rs  v1.rs  v2.rs  v3.rs  v4.rs
crates/volta-migrate/src/v3/: config.rs
crates/volta/src/: cli.rs  common.rs  main.rs  volta-migrate.rs  volta-shim.rs
crates/volta/src/command/: completions.rs  fetch.rs  install.rs  mod.rs  pin.rs  run.rs  setup.rs  uninstall.rs  update.rs  use.rs  which.rs
crates/volta/src/command/list/: human.rs  mod.rs  plain.rs  toolchain.rs
crates/volta/tests/acceptance/: corrupted_download.rs  direct_install.rs  direct_uninstall.rs  execute_binary.rs  merged_platform.rs  migrations.rs  volta_install.rs  volta_pin.rs  volta_run.rs  volta_uninstall.rs
crates/volta/tests/acceptance/support/: sandbox.rs
crates/volta/tests/smoke/support/: temp_project.rs
dev/rpm/: build-rpm.sh
dev/unix/: boot-install.sh  build.sh  install.sh.in  release.sh  test-events  volta-install-legacy.sh  volta-install.sh
dev/unix/tests/: install-script.bats
