[package]
name       = "volta"
version    = "2.0.2"
license    = "BSD-2-Clause"
repository = "https://github.com/volta-cli/volta"
edition    = "2021"

[workspace]

[[bin]]
name = "volta-shim"
path = "src/volta-shim.rs"

[[bin]]
name = "volta-migrate"
path = "src/volta-migrate.rs"

[dependencies]
clap          = { version = "4.5.24", features = ["color", "derive", "wrap_help"] }
clap_complete = "4.5.46"
dirs          = "6.0.0"
log           = { version = "0.4", features = ["std"] }
mockito       = { version = "0.31.1", optional = true }
node-semver   = "2"
once_cell     = "1.19.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0.135"
textwrap      = "0.16.1"
volta-core    = { path = "crates/volta-core" }
volta-migrate = { path = "crates/volta-migrate" }
which         = "7.0.1"

[dev-dependencies]
cfg-if       = "1.0"
ci_info      = "0.14.14"
envoy        = "0.1.3"
hamcrest2    = "0.3.0"
headers      = "0.4"
test-support = { path = "crates/test-support" }

[target.'cfg(windows)'.dependencies]
winreg = "0.53.0"

[features]
cross-platform-docs = ["volta-core/cross-platform-docs"]
mock-network        = ["mockito", "volta-core/mock-network"]
smoke-tests         = []
volta-dev           = []

[profile.release]
lto           = "fat"
codegen-units = 1
