[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version    = "2.0.2"
edition    = "2024"
repository = "https://github.com/kjanat/volta"
license    = "BSD-2-Clause"

[workspace.lints.clippy]
# Touch these and you'll die. Mostly here to stop ai agents from adding allow comments everywhere...
branches_sharing_code                     = "forbid"
cargo                                     = { level = "warn", priority = -1 }
cargo_common_metadata                     = "deny"
case_sensitive_file_extension_comparisons = "forbid"
doc_markdown                              = "deny"
fallible_impl_from                        = "deny"
items_after_statements                    = "deny"
manual_let_else                           = "deny"
match_same_arms                           = "forbid"
missing_panics_doc                        = "forbid"
module_name_repetitions                   = "forbid"
multiple_crate_versions                   = "deny"
needless_pass_by_ref_mut                  = "deny"
needless_pass_by_value                    = "deny"
nursery                                   = { level = "warn", priority = -1 }
option_if_let_else                        = "forbid"
option_map_or_none                        = "forbid"
or_fun_call                               = "deny"
pedantic                                  = { level = "warn", priority = -1 }
redundant_pub_crate                       = "forbid"
ref_option                                = "deny"
should_implement_trait                    = "forbid"
significant_drop_tightening               = "deny"
struct_excessive_bools                    = "deny"
struct_field_names                        = "forbid"
too_long_first_doc_paragraph              = "forbid"
too_many_lines                            = "warn"
unnecessary_debug_formatting              = "deny"
unused_self                               = "deny"
used_underscore_items                     = "forbid"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto           = "fat"
codegen-units = 1
