[package]
name    = "archive"
version = "0.1.0"
edition = "2021"

[dependencies]
attohttpc     = { version = "0.28", default-features = false, features = ["compress", "json", "tls-rustls-native-roots"] }
cfg-if        = "1.0"
flate2        = "1.0"
fs-utils      = { path = "../fs-utils" }
headers       = "0.4"
log           = { version = "0.4", features = ["std"] }
progress-read = { path = "../progress-read" }
tar           = "0.4.13"
tee           = "0.1.0"
thiserror     = "2.0.0"
verbatim      = "0.1"
# Set features manually to drop usage of `time` crate: we do not rely on that
# set of capabilities, and it has a vulnerability. We also don't need to use
# every single compression algorithm feature since we are only downloading
# Node as a zip file
zip_rs        = { package = "zip", version = "=2.1.6", default-features = false, features = ["bzip2", "deflate"] }
