[package]
name                 = "archive"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
readme.workspace     = true
keywords.workspace   = true
categories.workspace = true
description          = "Archive extraction utilities for Volta"

[dependencies]
attohttpc.workspace     = true
cfg-if.workspace        = true
flate2.workspace        = true
headers.workspace       = true
log.workspace           = true
progress-read.workspace = true
tar.workspace           = true
tee.workspace           = true
thiserror.workspace     = true
verbatim.workspace      = true
zip.workspace           = true

[lints]
workspace = true
