[package]
name                 = "test-support"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
readme.workspace     = true
keywords.workspace   = true
categories.workspace = true
description          = "Test utilities and matchers for Volta"

[dependencies]
hamcrest2.workspace  = true
serde_json.workspace = true
thiserror.workspace  = true

[lints]
workspace = true
