[package]
name                 = "test-support"
version              = "0.1.0"
edition.workspace    = true
description          = "Test utilities and matchers for Volta"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
hamcrest2.workspace  = true
serde_json.workspace = true
thiserror.workspace  = true

[lints]
workspace = true
