[package]
name                 = "validate-npm-package-name"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
readme.workspace     = true
keywords.workspace   = true
categories.workspace = true
description          = "NPM package name validation for Volta"

[lib]

[dependencies]
once_cell.workspace        = true
percent-encoding.workspace = true
regex.workspace            = true

[lints]
workspace = true
