[package]
name                 = "volta-core"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
readme.workspace     = true
keywords.workspace   = true
categories.workspace = true
description          = "Core library for Volta JS toolchain manager"

[dependencies]
archive.workspace                   = true
attohttpc.workspace                 = true
cfg-if.workspace                    = true
chain-map.workspace                 = true
chrono.workspace                    = true
cmdline_words_parser.workspace      = true
console.workspace                   = true
ctrlc.workspace                     = true
detect-indent.workspace             = true
dirs.workspace                      = true
dunce.workspace                     = true
envoy.workspace                     = true
fs2.workspace                       = true
headers.workspace                   = true
httpdate.workspace                  = true
indexmap.workspace                  = true
indicatif.workspace                 = true
log.workspace                       = true
mockito                             = { workspace = true, optional = true }
nodejs-semver.workspace             = true
once_cell.workspace                 = true
os_info.workspace                   = true
readext.workspace                   = true
regex.workspace                     = true
retry.workspace                     = true
serde.workspace                     = true
serde_json.workspace                = true
tempfile.workspace                  = true
terminal_size.workspace             = true
textwrap.workspace                  = true
validate-npm-package-name.workspace = true
volta-layout.workspace              = true
walkdir.workspace                   = true
which.workspace                     = true

[target.'cfg(windows)'.dependencies]
junction.workspace = true
winreg.workspace   = true

[features]
cross-platform-docs = []
mock-network        = ["mockito"]

[lints]
workspace = true
