[package]
name                 = "volta-layout-macro"
version              = "0.1.0"
edition.workspace    = true
repository.workspace = true
license.workspace    = true
readme.workspace     = true
keywords.workspace   = true
categories.workspace = true
description          = "Proc-macro for Volta directory layout definitions"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true

[lints]
workspace = true
