[package]
name                 = "volta-layout-macro"
version              = "0.1.0"
edition.workspace    = true
description          = "Proc-macro for Volta directory layout definitions"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true

[lints]
workspace = true
