[package]
name                 = "volta-layout"
version              = "0.1.1"
edition.workspace    = true
description          = "Volta directory layout definitions"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
volta-layout-macro.workspace = true

[lints]
workspace = true
