[package]
name    = "volta-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
log          = { version = "0.4", features = ["std"] }
node-semver  = "2"
serde        = { version = "1.0.217", features = ["derive"] }
serde_json   = { version = "1.0.135", features = ["preserve_order"] }
tempfile     = "3.14.0"
volta-core   = { path = "../volta-core" }
volta-layout = { path = "../volta-layout" }
walkdir      = "2.5.0"
