[package]
name                 = "volta-migrate"
version              = "0.1.0"
edition.workspace    = true
description          = "Migration utilities for Volta directory layouts"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
log.workspace           = true
nodejs-semver.workspace = true
serde.workspace         = true
serde_json.workspace    = true
tempfile.workspace      = true
volta-core.workspace    = true
volta-layout.workspace  = true
walkdir.workspace       = true

[lints]
workspace = true
